--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">NewsApp</string>
     <string name="menu_refresh">Refresh</string>
+    <string name="detail_read">Read article</string>
 </resources>
