--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">NewsApp</string>
     <string name="menu_refresh">Refresh</string>
     <string name="detail_read">Read article</string>
+    <string name="menu_booksmark">Booksmark</string>
 </resources>
