--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
     <string name="menu_refresh">Refresh</string>
     <string name="detail_read">Read article</string>
     <string name="menu_booksmark">Booksmark</string>
+    <string name="search_hint">Search</string>
+    <string name="Search">Search</string>
 </resources>
